[package]
name = "supercoolgb"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["enable_echo_ram_emulation", "enable_FEA0_FEFF_range_emulation"]
enable_echo_ram_emulation = []
enable_FEA0_FEFF_range_emulation = []
