[package]
name = "supercoolgb"
version = "0.1.0"
edition = "2024"

[dependencies]
datatest = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["enable_echo_ram_emulation", "enable_FEA0_FEFF_range_emulation"]
enable_echo_ram_emulation = []
enable_FEA0_FEFF_range_emulation = []

[profile.dev]
overflow-checks = false # We want addition to behave in the normal way for emulation reasons. 
# overflow-checks is false in profile.release by default already